--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "any-chat",
+  "name": "@alancpazett/any-ai",
   "version": "1.0.0",
   "description": "A unified interface for multiple AI chat providers (OpenAI, Gemini)",
   "main": "dist/index.js",
@@ -28,6 +28,7 @@
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "jest": "^29.0.0",
+    "semantic-release": "^24.2.1",
     "ts-jest": "^29.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0"
@@ -36,5 +37,8 @@
     "@anthropic-ai/sdk": "^0.36.3",
     "@google/generative-ai": "^0.1.0",
     "openai": "^4.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
